2008-10-29  Manuel Arostegui <marostegui@artica.es>
	
	* pandora_server/lib/PandoraFMS/Config.pm: Updated build number.

2008-10-27  Esteban Sanchez  <esteban@artica.es>

	* pandora_server_installer, lib/PandoraFMS/DB.pm: Merged from trunk
	version, fixing a couple of bugs.

2008-10-16  Sancho Lerena <slerena@artica.es>

	* Config.pm: Version update.

	This should be the final commit for 2.0 stable version.  

2008-10-10  Sancho Lerena <slerena@artica.es>

	* bin/pandora_snmpconsole: Trap SNMP forward not will included in 
	this version, moved to 2.1 roadmap.

	* bin/pandora_snmpconsole: Added support to get custom value, 
	custom type and custom OID. Code for trap2agent forward feature
	not fully implemented, don't work yet, need finish.
	
	* util/pandora_db.pl: Now delete also events and session information.
	String data is using utimestamp to purge (faster!).

2008-10-02  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_network: Added support for multiple SNMP versions.

2008-09-08  Raul Mateos <raulofpandora@gmail.com>

	* README: Updated version and URL.
	
	* lib/PandoraFMS/Config.pm, pandora_package_installer, pandora_server_installer, 
	pandora_server.spec: Updated URL.
	
2008-09-24  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_wmi: Added WMI namespace support.

2008-09-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added Export Server support.

2008-09-16  Sancho Lerena <slerena@artica.es>

	* util/plugin/ssh_pandoraplugin.sh: New remote SSH exec plugin.

	* util/plugin/ssh-exec_pandoraplugin.pl: Deleted old one because
	it has A LOT of problematic dependencies.

2008-09-15  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Use data timestamp when available (instead of
	  agent timestamp).

2008-09-08  Raul Mateos <raulofpandora@gmail.com>

	* util/pandora_db.pl: Updated year and URL.
	
	* util/pandora_dbstress.pl: Updated year and build.
	
	* pandora_*: Updated headers with build and new URL, better style
