@@ -1,3 +1,10 @@
+2008-10-30  Sancho Lerena <slerena@gmail.com>
+
+	* lib/PandoraFMS/DB.pm:  Some people reports problems with 
+	server stop detection. This could help, because has optimized
+	way to detect servers, but is not a bugfix because I cannot 
+	reproduce the problem.
+
 2008-10-29  Manuel Arostegui <marostegui@artica.es>
 	
 	* pandora_server/lib/PandoraFMS/Config.pm: Updated build number.
